# so101-lab

./: .gitignore  Makefile  README.md  calibrate_gripper.py  calibrate_joint.py  fetch_urdf.sh  find_follower_gripper.py  ik.py  keyboard_teleop.py  multiarm.py  pyproject.toml  set_motor_id.py  setup.sh  sim_backend.py  so101_config.py  step_positioning.py  trace_path.py  vr_teleop.py
docs/: LEARNING_AND_SIM.md  ROADMAP.md  SO101_BRINGUP.md  TOOLPATH_PLANNING.md  VR_TELEOP.md
phone_teleop/: README.md  _hebi_stub.py  debug_phone.py  record.py  replay.py  sim_robot.py  teleoperate.py  teleoperate_sim.py
