[project]
name = "so101-lab"
version = "0.1.0"
description = "Tools and experiments for SO-101 arms: bring-up, calibration, multi-arm coordination, and STEP-based positioning. Built on lerobot (dependency, not a fork)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dan Newcome" }]
dependencies = [
    # lerobot pinned to the exact commit these tools were developed against.
    # To use a released lerobot instead, swap this for:
    #   "lerobot[feetech,dataset,viz]>=0.6.0"
    "lerobot[feetech,dataset,viz] @ git+https://github.com/huggingface/lerobot.git@73782447f2ca420f8d71c9bd0a169ece5968d2d6",
    "numpy",
]

[project.optional-dependencies]
# STEP-file reading for step_positioning.py (OpenCascade via build123d).
step = ["build123d>=0.7"]
# FK/IK for trace_path.py / vr_teleop.py (placo). Also run ./fetch_urdf.sh.
kin = ["placo>=0.9,<1.0"]
# MuJoCo sim backend (sim_backend.py, vr_teleop.py). Needs the mjSpec attach API.
sim = ["mujoco>=3.2"]
# VR teleop pose source. oculus_reader also needs its APK sideloaded on the Quest;
# it installs from git:  pip install "oculus_reader @ git+https://github.com/rail-berkeley/oculus_reader.git"

[tool.uv]
# This project is a set of runnable scripts, not an installable package.
package = false
