[project]
name = "so101-lab"
version = "0.1.0"
description = "Tools and experiments for SO-101 arms: bring-up, calibration, multi-arm coordination, and STEP-based positioning. Built on lerobot (dependency, not a fork)."
readme = "README.md"
requires-python = ">=3.12"  # lerobot requires >=3.12
license = { text = "MIT" }
authors = [{ name = "Dan Newcome" }]
dependencies = [
    # lerobot pinned to the exact commit these tools were developed against.
    # To use a released lerobot instead, swap this for:
    #   "lerobot[feetech,dataset,viz]>=0.6.0"
    "lerobot[feetech,dataset,viz] @ git+https://github.com/huggingface/lerobot.git@73782447f2ca420f8d71c9bd0a169ece5968d2d6",
    "numpy",
]

[project.optional-dependencies]
# STEP-file reading for step_positioning.py (OpenCascade via build123d).
step = ["build123d>=0.7"]
# MuJoCo sim backend (sim_backend.py, vr_teleop.py). Needs the mjSpec attach API.
sim = ["mujoco>=3.2"]
# Phone / WebXR teleop (phone_teleop/*). The Android path uses the `teleop`
# WebXR package — works in the Quest 2 browser (no APK). hebi-py (iOS) omitted.
phone = ["teleop>=0.1.0,<0.2.0", "fastapi<1.0", "scipy>=1.14.0,<2.0.0"]
# NOTE: placo (FK/IK for trace_path.py / vr_teleop.py) is NOT listed here.
# placo 0.9.16 hard-links liburdfdom_sensor.so.4 (absent on Ubuntu 24.04/25.10),
# and 0.9.23 (which bundles its own urdfdom) depends on the cmeel pre-release
# stack that uv's locked resolver refuses. `uv pip install placo==0.9.23`
# resolves it fine, so `setup.sh` installs it separately after `uv sync`.
# VR pose source: oculus_reader also needs its APK sideloaded on the Quest;
# install from git: pip install "oculus_reader @ git+https://github.com/rail-berkeley/oculus_reader.git"

[tool.uv]
# This project is a set of runnable scripts, not an installable package.
package = false
